# pinch-of-salt

./: .gitattributes  .gitignore  Justfile  README.md  README_ui.md  app.js  flake.nix  index.html  justfile  knowledge.html  main.py  pyproject.toml  style.css  workflow.html
.github/workflows/: update-feeds.yml
core/: Cargo.toml
core/src/: db.rs  fact_extractor.rs  link_history.rs  main.rs  models.rs  scraper.rs
data/: feeds.yaml  history_data.json  pinch.db
docs/: index.html
frontend/: app.js  index.html  style.css
src/: api.py  generate_site.py  rss.py  static.html  ui.py
src/frontend/: app.js  kg.js  workflow.html
src/python/: db.py  extractor.py  main.py  models.py  processor.py  rag.py  scraper.py
