[project]
name = "pinch-of-salt"
version = "0.1.0"
description = "Take history with a pinch of salt"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.124.0",
    "feedparser>=6.0.12",
    "lightagent>=0.4.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "streamlit>=1.52.1",
]

[tool.uv]
package = true
