[project]
name = "pinch-core"
version = "0.1.0"
description = "Pinch of Salt news processing engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.11",
    "requests>=2.31.0",
    "scikit-learn>=1.4.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.1",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "sentence-transformers>=3.0.0",
    "sqlite-vec>=0.1.0",
    "pyyaml>=6.0.3",
]

[tool.uv]
managed = true
